correct overlay placement

--- a/BreakfastFinder/Base.lproj/Main.storyboard
+++ b/BreakfastFinder/Base.lproj/Main.storyboard
@@ -1,32 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14256" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14243"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Vision Object Recognition View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="VisionObjectRecognitionViewController" customModule="VisionCamObjectRecognition_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="VisionObjectRecognitionViewController" customModule="BreakfastFinder" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Pd-kf-6vF">
+                                <rect key="frame" x="20" y="48" width="374" height="814"/>
+                            </imageView>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EHs-7s-Q8j">
+                                <rect key="frame" x="229" y="48" width="185" height="400"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="400" id="FCR-3F-4Op"/>
+                                    <constraint firstAttribute="width" secondItem="EHs-7s-Q8j" secondAttribute="height" multiplier="414:896" id="pc2-2H-g8z"/>
+                                </constraints>
+                            </arscnView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="EHs-7s-Q8j" secondAttribute="trailing" id="22j-kS-Yys"/>
+                            <constraint firstItem="7Pd-kf-6vF" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Pru-aF-PNB"/>
+                            <constraint firstItem="7Pd-kf-6vF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="TDD-Uw-bmJ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7Pd-kf-6vF" secondAttribute="trailing" id="nNj-cG-7k2"/>
+                            <constraint firstItem="EHs-7s-Q8j" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="tg4-nL-BJN"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7Pd-kf-6vF" secondAttribute="bottom" id="zGD-Df-dXn"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="previewView" destination="8bC-Xf-vdC" id="KdU-3x-Jsv"/>
+                        <outlet property="previewView" destination="7Pd-kf-6vF" id="QL2-vi-skT"/>
+                        <outlet property="sceneView" destination="EHs-7s-Q8j" id="nth-6c-ZeO"/>
+                        <outlet property="view" destination="8bC-Xf-vdC" id="Gvi-Ne-j4n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-63.200000000000003" y="-36.431784107946029"/>
         </scene>
     </scenes>
 </document>
